<resources>
    <string name="app_name">My music</string>
    <string name="shuffle">Shuffle</string>
    <string name="previous">Previous</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next">Next</string>
    <string name="repeat">Repeat</string>
    <string name="album_art">Album Art</string>
    <string name="collapse">Collapse</string>
    <string name="not_playing">Not Playing</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_title">Unknown Title</string>
    <string name="favorite">Favorite</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="playlists">Playlists</string>
    <string name="playlists_long_press_hint">Playlists (long-press to delete)</string>
    <string name="favorites">Favorites</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="edit_playlist">Edit Playlist</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="delete_playlist_confirmation">Are you sure you want to delete "%s"?</string>
    <string name="playlist_deleted">Playlist deleted</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="sort_by_name">Sort: Name ↑</string>
    <string name="sort_by_artist">Sort: Artist ↑</string>
    <string name="sort_by_date">Sort: Date ↓</string>
    <string name="sort_by_duration">Sort: Duration ↓</string>
    <string name="showing_songs">Showing %d songs</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="remove_from_playlist">Remove from Playlist</string>
    <string name="sleep_timer_set">Sleep timer set for %d minutes</string>
    <string name="sleep_timer_cancel">Sleep timer cancelled</string>
    <string name="all_songs">All Songs</string>
    <string name="shuffle_on">Shuffle On</string>
    <string name="shuffle_off">Shuffle Off</string>
    <string name="repeat_all">Repeat All</string>
    <string name="repeat_one">Repeat One</string>
    <string name="repeat_off">Repeat Off</string>
    <string name="notification_channel_name">Music Playback</string>
    <string name="notification_channel_description">Shows currently playing music</string>
</resources>