<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="Search"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorites"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_playlists"
        android:icon="@drawable/ic_playlist"
        android:title="@string/playlists"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_all_songs"
        android:title="@string/all_songs"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_themes"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="Themes"
        app:showAsAction="never" />
    
</menu>